@@ -17,7 +17,6 @@
  */
 package com.graphhopper.routing;
 
-import com.graphhopper.storage.index.QueryResult;
 import com.graphhopper.util.NotThreadSafe;
 
 /**
@@ -34,17 +33,6 @@ public interface RoutingAlgorithm
      * @return the path. Call the method found() to make sure that the path is valid.
      */
     Path calcPath( int from, int to );
-
-    /**
-     * Calculates the best path between the specified query results from GPS lookup.
-     * <p/>
-     * Note: The underlying implementation introduces a state of the algorithm and so it is tightly
-     * coupled to the query! Reusing this instance should be done carefully: only from within one
-     * thread and only via this calcPath method.
-     * <p/>
-     * @return the path. Call the method found() to make sure that the path is valid.
-     */
-    Path calcPath( QueryResult from, QueryResult to );
 
     /**
      * @return name of this algorithm
