@@ -66,17 +66,19 @@ public class DijkstraBidirectionCHTest extends AbstractRoutingAlgorithmTester
 
     @Override
     public RoutingAlgorithm createAlgo( Graph g, AlgorithmOptions opts )
-    {
-        opts.setAlgorithm(AlgorithmOptions.DIJKSTRA_BI);
-        return createFactory(g, opts).createAlgo(g, opts);
+    {        
+        return createFactory(g instanceof QueryGraph ? ((QueryGraph) g).getOriginalGraph() : g, opts).
+                createAlgo(g, opts);
     }
 
     @Override
     public RoutingAlgorithmFactory createFactory( Graph g, AlgorithmOptions opts )
     {
+        // set default opts for factory.createAlgo
+        opts.setAlgorithm(AlgorithmOptions.DIJKSTRA_BI);
         PrepareContractionHierarchies ch = new PrepareContractionHierarchies((LevelGraph) g,
                 opts.getFlagEncoder(), opts.getWeighting(), TraversalMode.NODE_BASED);
-        // hack: prepare matrixgraph only once
+        // hack: prepare matrixGraph only once
         if (g != preparedMatrixGraph)
             ch.doWork();
 
